Fix: Overlapping Scroll Button  (#5)

--- a/minstrel/static/site.css
+++ b/minstrel/static/site.css
@@ -68,7 +68,7 @@ header {
     top: 0;
 }
 
-main {padding: 6.5rem 1rem 1rem}
+main {padding: 6.5rem 1rem 5rem}
 section {padding-bottom: 2rem}
 h1 {color: var(--color-title); font-size: 2rem; font-weight: 700}
 h2 {color: var(--color-title); font-size: 1.5rem; font-weight: 500}
